# 3D_animation

./: CMakeLists.txt  README.md  run.sh
configuration/: root_directory.h
includes/learnopengl/: anim_name_utils.h  animation.h  animator.h  bone.h  game_config.h  mesh.h  model.h  model_animation.h
resources/FarmerPack/Animations/Farmer/: anim_Farmer_attack_A.FBX  anim_Farmer_idle_combat.FBX  anim_Farmer_run.FBX  anim_Farmer_walk.FBX
resources/FarmerPack/Character/Farmer/: SKM_Farmer_male.fbx
src/8.guest/2020/skeletal_animation/: anim_model.vs  skeletal_animation.cpp
